# iree-runtime-dist

./: .gitignore  CLAUDE.md  README.md  build-runtime.sh  iree-runtime-dist-wishlist.md
.github/workflows/: release.yml  spike-tsan-aslr.yml  warm-build-image.yml
cmake/: IreeRuntimeDist.cmake.in
docker/: Dockerfile  linux-aarch64.Dockerfile  linux-x86_64.Dockerfile
docs/: TSAN.md.in  metadata-README.md.in  share-README.md.in
docs/handover/: 2026-07-20-djl-iree-engine-handover.md
docs/superpowers/notes/: 2026-07-22-tsan-ci-spike.md
docs/superpowers/plans/: 2026-07-19-iree-runtime-dist.md  2026-07-22-tsan-variant-and-variant-machinery.md  2026-07-23-metadata-schema-enrichment.md
docs/superpowers/specs/: 2026-07-19-iree-runtime-dist-design.md  (+2 more)
emit/: add.mlir  emit_constants.c
scripts/: build-image.sh  config-deps.sh  derive-version.sh  enrich-constants.py  gen-addvmfb.sh  gen-constants.sh  gen-manifest.sh  gen-notices.sh  gen-pin.sh  gen-tsan-docs.sh  install-headers.sh  package-metadata.sh  package.sh  relocatability.sh
scripts/lib/: cmakeflags.sh  linked-components.sh  naming.sh  submodules.sh  variants.sh
test/: assert.sh  build_smoke.sh  cmake_additions.test.sh  constants.test.sh  consumer_mode.test.sh  derive_version.test.sh  enrich_constants.test.sh  gen_pin.test.sh  lib_naming.test.sh  lib_submodules.test.sh  lib_variants.test.sh  manifest.test.sh  notices.test.sh  package.test.sh  package_metadata.test.sh  print_flags.test.sh  relocatability.test.sh  run.sh  workflow_paths.test.sh
test/consumer/: CMakeLists.txt  consumer.c  mode.sh  run.sh
